<resources>
    <string name="app_name">Guess The Number</string>
    <string name="behind">Недолёт!</string>
    <string name="ahead">Перелёт!</string>
    <string name="hit">Поздравляю! ВЫ угадали число! Разработчик гордится вами! Шанс того, что вы угадаете число был около 0,00000001%!</string>
    <string name="hit2">Поздравляю! ВЫ угадали число! Разработчик гордится вами! Шанс того, что вы угадаете число был около:&#160;</string>
    <string name="input_value">Попытать счастье</string>
    <string name="play_more">Сыграть ещё</string>
    <string name="try_to_guess">Попробуйте угадать число (1 &#8211; 10)</string>
    <string name="try_to_guess_first">Попробуйте угадать число (&#160;</string>
    <string name="try_to_guess_second">&#160;)</string>
    <string name="error">Неверный ввод!</string>
    <string name="exit">Выйти из приложения</string>
    <string name="correct">Введите число от 1 до 10!</string>
    <string name="input">Введите число</string>
    <string name="restart">Ещё раз!</string>
    <string name="hint">Введите значение</string>
    <string name="over">Вы програли! Правильное число:&#160;</string>
    <string name="left_lifes">Осталось попыток:&#160;</string>
    <string name="set_difficult">Выберите уровень сложности:</string>
    <string name="easy">Лёгкий</string>
    <string name="normal">Средний</string>
    <string name="hard">Максимальный</string>
    <string name="hard_lifes">У вас одна попытка!</string>
    <string name="change_difficult">Поменять сложность</string>
    <string name="GTN">Guess The Number</string>
    <string name="about">Об разработчике</string>
    <string name="about_title">Разработал студент 1-го курса Группы ИСИП22/1 Сергеев Владимир</string>
    <string name="back">Вернуться в меню</string>
    <string name="about_text">Приложение разрабатывалось в течении 2-3 дней. Было потраченно суммарно 72 человека-часа. Приложение является Open Source: </string>
    <string name="link">https://github.com/TEZOdeer/Sergeev_isip221/tree/main/guess_the_number</string>
    <string name="custom_parametr1">Введите минимальное число</string>
    <string name="custom_parametr2">Введите максимальное число</string>
    <string name="custom_parametr3">Введите количество попыток</string>
    <string name="custom_start">Начать</string>
    <string name="tvinfo_min_fail">Введите правильное значение!</string>
    <string name="tvinfo_max_fail">Введите правильное значение!</string>
    <string name="tvinfo_tries_fail">Введите правильное значение!</string>
    <string name="Custom_difficult">"Кустомная"</string>
    <string name="Any">Введите любое числовое значение</string>
    <string name="correct_first">Введите число от&#160;</string>
    <string name="correct_second">&#160;до&#160;</string>
    <string name="correct_start">Проверьте правильность всех значений</string>
</resources>